fix overflow container

--- a/ToDoTask/src/App.css
+++ b/ToDoTask/src/App.css
@@ -13,7 +13,7 @@ h1 {
 
 .app {
   width: 1000px;
-  height: 670px;
+  min-height: 670px;
   background-color: #ffffff;
   box-shadow: 0px 0px 4px rgba(0, 23, 71, 0.15);
   border-radius: 32px;
@@ -24,6 +24,7 @@ h1 {
 .app__conteiner {
   width: 600px;
 }
+
 
 form {
   margin-top: 32px;
