--- a/ToDoTask/src/index.css
+++ b/ToDoTask/src/index.css
@@ -5,8 +5,8 @@ body {
   
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
   background-color: #F5F9FF;
   display: flex;
   align-items: center;
